Fix navbar with scrollbar compatibility problems

--- a/src/index.css
+++ b/src/index.css
@@ -11,17 +11,13 @@
     }
 }
 
-.scrollbar {
-    width: 500px;
-    height: 150px;
-    overflow-y: scroll;
+html {
     scrollbar-color: #FFD9CE transparent;
     scrollbar-width: thin;
 }
 
 ::-webkit-scrollbar-track {
-    border-radius: 10px;
-    background-color: transparent;
+    background-image: linear-gradient(to bottom, #432F70, #713770);
 }
 
 ::-webkit-scrollbar {
@@ -30,7 +26,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    border-radius: 10px;
+    border-radius: 60px;
     box-shadow: inset 0 0 5px rgba(0, 0, 0, .3);
     background-color: #FFD9CE;
 }
